--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
-version: "3.8"
+version: '3.9'
 
 services:
-  db:
+  postgres:
     image: postgres:15
     container_name: travel_postgres
+    restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: travel_db
     ports:
       - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
+      - travel_db_data:/var/lib/postgresql/data
 
 volumes:
-  db_data:
-
+  travel_db_data:
