--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node -P tsconfig.dev.json src/index.ts",
+    "dev": "tsx src/index.ts",
     "build": "tsc -p tsconfig.prod.json",
     "start": "node dist/index.js"
   },
