--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/pg": "^8.15.5",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2"
   }
 }
