--- a/backend/tsconfig.prod.json
+++ b/backend/tsconfig.prod.json
@@ -1,8 +1,8 @@
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "moduleResolution": "Node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "target": "ES2020",
     "rootDir": "src",
     "outDir": "dist",
