--- a/backend/tsconfig.prod.json
+++ b/backend/tsconfig.prod.json
@@ -6,7 +6,9 @@
     "target": "ES2020",
     "rootDir": "src",
     "outDir": "dist",
-    "sourceMap": false
+    "sourceMap": false,
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "include": ["src"]
 }
