--- a/backend/tsconfig.prod.json
+++ b/backend/tsconfig.prod.json
@@ -6,9 +6,7 @@
     "target": "ES2020",
     "rootDir": "src",
     "outDir": "dist",
-    "sourceMap": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true
+    "sourceMap": false
   },
   "include": ["src"]
 }
