機能: nodemailerの型定義を追加し、tsconfig.base.jsonにtypeRootsオプションを追加

--- a/backend/tsconfig.base.json
+++ b/backend/tsconfig.base.json
@@ -3,6 +3,7 @@
     "strict": true,
     "jsx": "react-jsx",
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["./src/types", "./node_modules/@types"]
   }
 }
